<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/kitchen"
            android:background="#A49E60"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#1A1719"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ten_minute_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_above="@+id/twenty_minute_wrap">

                <TextView
                    android:id="@+id/tenMinuteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/ten_min_heading"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/twenty_minute_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_above="@+id/thirty_minute_wrap"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/twentyMinuteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/twenty_min_heading"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirty_minute_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/thirtyMinuteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/thirty_min_heading"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>

